<resources>
    <string name="app_name">freelancing portal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="jobs">Jobs</string>
    <string name="Proposals">Proposals</string>
    <string name="Contracts">Contracts</string>
    <string name="Messages">Messages</string>
    <string name="Alerts">Alerts</string>
    <string name="card2">Contracts you are actively working on will appear here.</string>
    <string name="card2_gr">Start searching for new projects now!</string>
    <string name="card3">Direct contracts</string>
    <string name="card3_txt">Create simple contracts wit your clients, protected in escrow, leading to quick payment.</string>
    <string name="card3_gr">Create and view your Direct Contracts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_register_heading">Registration</string>
</resources>