<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_jobs"
        android:icon="@drawable/ic_search"
        android:title="@string/jobs" />

    <item
        android:id="@+id/navigation_proposals"
        android:icon="@drawable/ic_article"
        android:title="@string/Proposals" />

    <item
        android:id="@+id/navigation_contracts"
        android:icon="@drawable/ic_contract"
        android:title="@string/Contracts" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_24"
        android:title="@string/Messages" />
    <item
        android:id="@+id/navigation_alerts"
        android:icon="@drawable/ic_add_alert"
        android:title="@string/Alerts" />
</menu>