<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/frag_jobs">

    <fragment
        android:id="@+id/frag_jobs"
        android:name="com.example.freelance.ui.JobsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_jobs" >
        <action
            android:id="@+id/action_frag_jobs_to_frag_proposals"
            app:destination="@id/frag_proposals" />
    </fragment>

    <fragment
        android:id="@+id/frag_proposals"
        android:name="com.example.freelance.ui.ProposalFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_proposal" >
        <action
            android:id="@+id/action_frag_proposals_to_frag_contracts"
            app:destination="@id/frag_contracts" />
    </fragment>

    <fragment
        android:id="@+id/frag_contracts"
        android:name="com.example.freelance.ui.ContractsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_contracts" >
        <action
            android:id="@+id/action_frag_contracts_to_frag_messages"
            app:destination="@id/frag_messages" />
    </fragment>

    <fragment
        android:id="@+id/frag_messages"
        android:name="com.example.freelance.ui.ContractsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_contracts" >
        <action
            android:id="@+id/action_frag_messages_to_frag_alerts"
            app:destination="@id/frag_alerts" />
    </fragment>

    <fragment
        android:id="@+id/frag_alerts"
        android:name="com.example.freelance.ui.ContractsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_contracts" />
</navigation>